# ros_tracking

./: CMakeLists.txt  Calibration.ipynb  README.md  environment.yml  eval_env.yml  gtsam_discrete.ipynb  nuscenes_troubleshooting.ipynb  package.xml  plotting_analysis.ipynb  process_model.ipynb  sensor_model.ipynb  setup.py  tracking_env.yml
config/: default_nuscenes.yaml  e0_ab3dmot_baseline.yaml  e1_ab3dmot_proc_heuristic.yaml  e2_ab3dmot_proc_heuristic_sens_mini.yaml  experiments.yaml  motion_models.json  motion_models.yaml  motion_params.yaml  motion_params_no_xtrack.yaml  motion_params_unit_noise.yaml  nuscenes.yaml  nuscenes_to_mcap.yaml  oakd.yaml  viz_nuscenes.yaml
config/detectors/: nuscenes.yaml
data/annotations/: mini_train.json
data/annotations/nuscenes-mini/: NuScenes-v1.0-mini-scene-0757-megvii.json
data/annotations/test/: test_data.json
data/dict/: NuScenes-v1.0-mini-scene-0061-megvii.json  NuScenes-v1.0-mini-scene-0103-megvii.json  NuScenes-v1.0-mini-scene-0553-megvii.json  NuScenes-v1.0-mini-scene-0655-megvii.json  NuScenes-v1.0-mini-scene-0796-megvii.json  NuScenes-v1.0-mini-scene-0916-megvii.json  NuScenes-v1.0-mini-scene-1077-megvii.json  NuScenes-v1.0-mini-scene-1094-megvii.json  NuScenes-v1.0-mini-scene-1100-megvii.json
data/solver/: NuScenes-v1.0-mini-scene-0061-megvii.csv
data/variables/: .~lock.test.csv#  nuscenes-mini.csv  test.csv
include/ros_tracking/: sensors.hpp  track_management.hpp  tracking_datatypes.hpp
launch/: compute_nuscenes_results.launch.py  convert_nuscenes_to_mcap.launch.py  oakd_demo_launch.py  run_experiments.launch.py  visualize_nuscenes.launch.py
results/: debug.json  e0_ab3dmot_baseline_results.json  evaluated_results.txt  results.json
ros_tracking/: assignment.py  datatypes.py  output.py  sensors.py  track_management.py  tracker.py
scripts/: analyze_nuscenes.py  compute_nuscenes_results.py  convert_nuscenes.py  eval_exp_results.py  evaluate.py  nuscenes_ann_to_json.py  nuscenes_dict_cal.py  nuscenes_mcap_to_dict.py  nuscenes_to_mcap.py  py_tracker.py  run_nuscenes_experiments.py  solve_nuscenes.py
src/: depthai_converter.cpp  det_converter.cpp  ros_tracker.cpp
