<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_tracking</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jd@todo.todo">jd</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

  <depend> rclcpp </depend>
  <depend> rclpy </depend>
  <depend> std_msgs </depend>
  <depend> tracetools_launch </depend>
  <depend> gtsam </depend>

  <depend> foxglove_msgs </depend>

  <exec_depend>rosbag2_storage</exec_depend>
  <exec_depend>ros2launch</exec_depend>

</package>
